added screen shot and selection border

--- a/src/app/deck/deck.component.sass
+++ b/src/app/deck/deck.component.sass
@@ -1,5 +1,5 @@
 .deck
-    top: 50px
+    top: 60px
     
 .card
   font-family: 'Apple Symbols'
@@ -16,3 +16,5 @@
   &-selected
       font-size: 1000%
       border-color: red;
+      border: 1px dashed #cccccc;
+
