--- a/src/app/deck/deck.component.html
+++ b/src/app/deck/deck.component.html
@@ -1,5 +1,29 @@
-<mat-grid-list class="deck" rowHeight="200px" [cols]="breakpoint" (window:resize)="onResize($event)">
-  <mat-grid-tile *ngFor="let card of deck" class="card {{'card-'+ card.suit}}" [ngClass]="{'card-selected': card.isSeleCted}">
-    {{cards[card.suit][card.value]}}
-  </mat-grid-tile>
+<mat-grid-list
+    class="deck"
+    rowHeight="200px"
+    [cols]="breakpoint"
+    (window:resize)="onResize($event)"
+>
+    <mat-grid-tile
+        *ngFor="let card of selectedCards"
+        class="card {{'card-'+ card.suit}}"
+        [ngClass]="{ 'card-selected': card.isSeleCted }"
+    >
+        {{ cards[card.suit][card.value] }}
+    </mat-grid-tile>
+</mat-grid-list>
+
+<mat-grid-list
+    class="deck"
+    rowHeight="200px"
+    [cols]="breakpoint"
+    (window:resize)="onResize($event)"
+>
+    <mat-grid-tile
+        *ngFor="let card of deck"
+        class="card {{'card-'+ card.suit}}"
+        [ngClass]="{ 'card-selected': card.isSeleCted }"
+    >
+        {{ cards[card.suit][card.value] }}
+    </mat-grid-tile>
 </mat-grid-list>
